[gd_scene load_steps=18 format=3 uid="uid://20ocomkmuthb"]

[ext_resource type="Script" uid="uid://c1sg0tby256mi" path="res://scenes/bar/dialogue/dialogue_runner.gd" id="1_rc1id"]
[ext_resource type="Texture2D" uid="uid://xxh7dfm56yjx" path="res://assets/player/portraits/player_default.png" id="2_eo332"]
[ext_resource type="Texture2D" uid="uid://crwobroptutke" path="res://assets/player/portraits/player_smile.png" id="3_11dv4"]
[ext_resource type="Texture2D" uid="uid://b1byjylalx7i" path="res://assets/player/portraits/player_sad.png" id="4_0dy6d"]
[ext_resource type="Texture2D" uid="uid://wexjjcgbo8s7" path="res://assets/player/portraits/player_unexpected.png" id="5_mnhfr"]
[ext_resource type="Texture2D" uid="uid://ca828prlcnn2c" path="res://assets/npc/portraits/npc_default.png" id="6_aismb"]
[ext_resource type="Texture2D" uid="uid://bltyllb34rfr4" path="res://assets/npc/portraits/npc_smile.png" id="7_5qoj6"]
[ext_resource type="Texture2D" uid="uid://dmtraf75t01ku" path="res://assets/npc/portraits/npc_sad.png" id="8_70gft"]
[ext_resource type="Texture2D" uid="uid://dn01xq2785mxu" path="res://assets/npc/portraits/npc_unexpected.png" id="9_xe56h"]
[ext_resource type="Texture2D" uid="uid://ji3t04yclj3h" path="res://icon.svg" id="10_eo332"]
[ext_resource type="Texture2D" uid="uid://cvqhybjw8l7gc" path="res://assets/微信图片_20260104221709_1742_222.png" id="11_0dy6d"]
[ext_resource type="FontFile" uid="uid://d3xyw82rfym72" path="res://assets/fonts/VT323-Regular.ttf" id="12_0dy6d"]
[ext_resource type="StyleBox" uid="uid://b0f2gynb02wf4" path="res://new_style_box_flat.tres" id="13_mnhfr"]

[sub_resource type="Theme" id="Theme_11dv4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0dy6d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mnhfr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aismb"]

[node name="DialogueBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rc1id")
bn_theme = ExtResource("13_mnhfr")
font = ExtResource("12_0dy6d")
typing_min_seconds = 0.4
typing_seconds_per_char = 0.02
typing_fade_out_seconds = 0.05
player_portraits = Array[Texture2D]([ExtResource("2_eo332"), ExtResource("3_11dv4"), ExtResource("4_0dy6d"), ExtResource("5_mnhfr")])
npc_portraits = Array[Texture2D]([ExtResource("6_aismb"), ExtResource("7_5qoj6"), ExtResource("8_70gft"), ExtResource("9_xe56h")])

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -10.0
offset_top = 192.0
offset_right = 638.0
offset_bottom = 360.43997
texture = ExtResource("11_0dy6d")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 217.79999
offset_right = 620.0
offset_bottom = 368.63998
mouse_filter = 2

[node name="PortraitMargin" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 17
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 30

[node name="PortraitCenter" type="CenterContainer" parent="HBoxContainer/PortraitMargin"]
layout_mode = 2
mouse_filter = 2

[node name="Portrait" type="TextureRect" parent="HBoxContainer/PortraitMargin/PortraitCenter"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("10_eo332")
expand_mode = 1

[node name="TextMargin" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(430, 0)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 20

[node name="RightVBox" type="VBoxContainer" parent="HBoxContainer/TextMargin"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="SpeakText" type="Label" parent="HBoxContainer/TextMargin/RightVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("12_0dy6d")
theme_override_font_sizes/font_size = 20
text = "这是玩家的对话内容"
vertical_alignment = 1
autowrap_mode = 3

[node name="ClickCatcher" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 20.0
offset_top = 217.79999
offset_right = 620.0
offset_bottom = 368.63998
theme = SubResource("Theme_11dv4")
theme_override_styles/normal = SubResource("StyleBoxEmpty_0dy6d")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mnhfr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_aismb")
flat = true
metadata/_edit_lock_ = true

[node name="ChoicesContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.55
anchor_right = 0.3
anchor_bottom = 0.55
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
theme_override_constants/separation = 4

[connection signal="pressed" from="ClickCatcher" to="." method="_on_button_pressed"]
